--- a/2DLv1_2022_vs2019/GameProgramming/GameProgramming.vcxproj
+++ b/2DLv1_2022_vs2019/GameProgramming/GameProgramming.vcxproj
@@ -11,14 +11,20 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\BackGround.cpp" />
     <ClCompile Include="src\CApplication.cpp" />
     <ClCompile Include="src\CBlock.cpp" />
+    <ClCompile Include="src\CBlock2.cpp" />
+    <ClCompile Include="src\CBlock3.cpp" />
+    <ClCompile Include="src\CBlock4.cpp" />
     <ClCompile Include="src\CBullet.cpp" />
     <ClCompile Include="src\CCamera.cpp" />
     <ClCompile Include="src\CCharacter.cpp" />
     <ClCompile Include="src\CCharacterManager.cpp" />
+    <ClCompile Include="src\CDokan.cpp" />
     <ClCompile Include="src\CEnemy.cpp" />
     <ClCompile Include="src\CEnemy2.cpp" />
+    <ClCompile Include="src\CEnemy3.cpp" />
     <ClCompile Include="src\CFont.cpp" />
     <ClCompile Include="src\CGame.cpp" />
     <ClCompile Include="src\CPlayer.cpp" />
@@ -32,14 +38,20 @@
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\BackGround.h" />
     <ClInclude Include="src\CApplication.h" />
     <ClInclude Include="src\CBlock.h" />
+    <ClInclude Include="src\CBlock2.h" />
+    <ClInclude Include="src\CBlock3.h" />
+    <ClInclude Include="src\CBlock4.h" />
     <ClInclude Include="src\CBullet.h" />
     <ClInclude Include="src\CCamera.h" />
     <ClInclude Include="src\CCharacter.h" />
     <ClInclude Include="src\CCharacterManager.h" />
+    <ClInclude Include="src\CDokan.h" />
     <ClInclude Include="src\CEnemy.h" />
     <ClInclude Include="src\CEnemy2.h" />
+    <ClInclude Include="src\CEnemy3.h" />
     <ClInclude Include="src\CFont.h" />
     <ClInclude Include="src\CGame.h" />
     <ClInclude Include="src\CMiss.h" />
@@ -52,6 +64,7 @@
     <ClInclude Include="src\CInput.h" />
     <ClInclude Include="src\CUi.h" />
     <ClInclude Include="src\main.h" />
+    <ClInclude Include="src\map.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{8802AF2F-2920-4700-89F2-CA6778727283}</ProjectGuid>
