--- a/2DLv1_2022_vs2019/GameProgramming/GameProgramming.vcxproj
+++ b/2DLv1_2022_vs2019/GameProgramming/GameProgramming.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="src\CEnemy3.cpp" />
     <ClCompile Include="src\CFont.cpp" />
     <ClCompile Include="src\CGame.cpp" />
+    <ClCompile Include="src\CGoal.cpp" />
     <ClCompile Include="src\CPlayer.cpp" />
     <ClCompile Include="src\CPlayer2.cpp" />
     <ClCompile Include="src\CPoint.cpp" />
@@ -54,6 +55,7 @@
     <ClInclude Include="src\CEnemy3.h" />
     <ClInclude Include="src\CFont.h" />
     <ClInclude Include="src\CGame.h" />
+    <ClInclude Include="src\CGoal.h" />
     <ClInclude Include="src\CMiss.h" />
     <ClInclude Include="src\CPlayer.h" />
     <ClInclude Include="src\CPlayer2.h" />
