--- a/2DLv1_2022_vs2019/GameProgramming/GameProgramming.vcxproj.filters
+++ b/2DLv1_2022_vs2019/GameProgramming/GameProgramming.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="src\BackGround.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="src\CGoal.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\CSound.h">
@@ -174,6 +177,9 @@
       <Filter>ソース ファイル</Filter>
     </ClInclude>
     <ClInclude Include="src\BackGround.h">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CGoal.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
   </ItemGroup>
