--- a/2DLv1_2022_vs2019/GameProgramming/GameProgramming.vcxproj
+++ b/2DLv1_2022_vs2019/GameProgramming/GameProgramming.vcxproj
@@ -17,6 +17,7 @@
     <ClCompile Include="src\CBlock2.cpp" />
     <ClCompile Include="src\CBlock3.cpp" />
     <ClCompile Include="src\CBlock4.cpp" />
+    <ClCompile Include="src\CBlock5.cpp" />
     <ClCompile Include="src\CBullet.cpp" />
     <ClCompile Include="src\CCamera.cpp" />
     <ClCompile Include="src\CCharacter.cpp" />
@@ -30,6 +31,7 @@
     <ClCompile Include="src\CGoal.cpp" />
     <ClCompile Include="src\CKinoko.cpp" />
     <ClCompile Include="src\CMoveBlock.cpp" />
+    <ClCompile Include="src\CMoveBlock2.cpp" />
     <ClCompile Include="src\CPlayer.cpp" />
     <ClCompile Include="src\CPlayer2.cpp" />
     <ClCompile Include="src\CPoint.cpp" />
@@ -47,6 +49,7 @@
     <ClInclude Include="src\CBlock2.h" />
     <ClInclude Include="src\CBlock3.h" />
     <ClInclude Include="src\CBlock4.h" />
+    <ClInclude Include="src\CBlock5.h" />
     <ClInclude Include="src\CBullet.h" />
     <ClInclude Include="src\CCamera.h" />
     <ClInclude Include="src\CCharacter.h" />
@@ -61,6 +64,7 @@
     <ClInclude Include="src\CKinoko.h" />
     <ClInclude Include="src\CMiss.h" />
     <ClInclude Include="src\CMoveBlock.h" />
+    <ClInclude Include="src\CMoveBlock2.h" />
     <ClInclude Include="src\CPlayer.h" />
     <ClInclude Include="src\CPlayer2.h" />
     <ClInclude Include="src\CPoint.h" />
