--- a/2DLv1_2022_vs2019/GameProgramming/GameProgramming.vcxproj.filters
+++ b/2DLv1_2022_vs2019/GameProgramming/GameProgramming.vcxproj.filters
@@ -102,6 +102,12 @@
     <ClCompile Include="src\CMoveBlock.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="src\CMoveBlock2.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CBlock5.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\CSound.h">
@@ -192,6 +198,12 @@
       <Filter>ソース ファイル</Filter>
     </ClInclude>
     <ClInclude Include="src\CMoveBlock.h">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CMoveBlock2.h">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CBlock5.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
   </ItemGroup>
