--- a/3DLv1_2022_vs2019/GameProgramming/GameProgramming.vcxproj.filters
+++ b/3DLv1_2022_vs2019/GameProgramming/GameProgramming.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClCompile Include="src\CTaskManager.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="src\CBillBoard.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\CSound.h">
@@ -201,6 +204,9 @@
       <Filter>ソース ファイル</Filter>
     </ClInclude>
     <ClInclude Include="src\CTaskManager.h">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CBillBoard.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
   </ItemGroup>
