--- a/3DLv2_2023_vs2019_Game/Project/3DLv2_2023_vs2019_00/GameProgramming/GameProgramming.vcxproj
+++ b/3DLv2_2023_vs2019_Game/Project/3DLv2_2023_vs2019_00/GameProgramming/GameProgramming.vcxproj
@@ -60,6 +60,7 @@
     <ClInclude Include="src\CCollider.h" />
     <ClInclude Include="src\CColliderLine.h" />
     <ClInclude Include="src\CColliderMesh.h" />
+    <ClInclude Include="src\CColliderMesh_shougaibutu.h" />
     <ClInclude Include="src\CColliderTriangle.h" />
     <ClInclude Include="src\CCollisionManager.h" />
     <ClInclude Include="src\CEffect.h" />
