--- a/3DLv2_2023_vs2019_Game/Project/3DLv2_2023_vs2019_00/GameProgramming/GameProgramming.vcxproj.filters
+++ b/3DLv2_2023_vs2019_Game/Project/3DLv2_2023_vs2019_00/GameProgramming/GameProgramming.vcxproj.filters
@@ -126,6 +126,12 @@
     <ClCompile Include="src\CItem1.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="src\CShougaibutuA.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CAlien.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\CSound.h">
@@ -245,7 +251,10 @@
     <ClInclude Include="src\CItem1.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="src\CColliderMesh_shougaibutu.h">
+    <ClInclude Include="src\CShougaibutuA.h">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CAlien.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
   </ItemGroup>
