--- a/3DLv2_2023_vs2019_Game/Project/3DLv2_2023_vs2019_00/GameProgramming/GameProgramming.vcxproj
+++ b/3DLv2_2023_vs2019_Game/Project/3DLv2_2023_vs2019_00/GameProgramming/GameProgramming.vcxproj
@@ -40,6 +40,7 @@
     <ClCompile Include="src\CPoint.cpp" />
     <ClCompile Include="src\CRectangle.cpp" />
     <ClCompile Include="src\CShougaibutuA.cpp" />
+    <ClCompile Include="src\CShougaibutuGimmick.cpp" />
     <ClCompile Include="src\CSound.cpp" />
     <ClCompile Include="src\CTaskManager.cpp" />
     <ClCompile Include="src\CTexture.cpp" />
@@ -81,6 +82,7 @@
     <ClInclude Include="src\CPoint.h" />
     <ClInclude Include="src\CRectangle.h" />
     <ClInclude Include="src\CShougaibutuA.h" />
+    <ClInclude Include="src\CShougaibutuGimmick.h" />
     <ClInclude Include="src\CSound.h" />
     <ClInclude Include="src\CTask.h" />
     <ClInclude Include="src\CTaskManager.h" />
