--- a/3DLv2_2023_vs2019_Game/Project/3DLv2_2023_vs2019_00/GameProgramming/GameProgramming.vcxproj.filters
+++ b/3DLv2_2023_vs2019_Game/Project/3DLv2_2023_vs2019_00/GameProgramming/GameProgramming.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClCompile Include="src\CAlien.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="src\CShougaibutuGimmick.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\CSound.h">
@@ -255,6 +258,9 @@
       <Filter>ソース ファイル</Filter>
     </ClInclude>
     <ClInclude Include="src\CAlien.h">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CShougaibutuGimmick.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
   </ItemGroup>
