--- a/3DLv2_2023_vs2019_Game/Project/3DLv2_2023_vs2019_00/GameProgramming/GameProgramming.vcxproj
+++ b/3DLv2_2023_vs2019_Game/Project/3DLv2_2023_vs2019_00/GameProgramming/GameProgramming.vcxproj
@@ -39,8 +39,8 @@
     <ClCompile Include="src\CPlayer2.cpp" />
     <ClCompile Include="src\CPoint.cpp" />
     <ClCompile Include="src\CRectangle.cpp" />
-    <ClCompile Include="src\CShougaibutuA.cpp" />
-    <ClCompile Include="src\CShougaibutuGimmick.cpp" />
+    <ClCompile Include="src\CSikaku.cpp" />
+    <ClCompile Include="src\CSikakuGimmick.cpp" />
     <ClCompile Include="src\CSound.cpp" />
     <ClCompile Include="src\CTaskManager.cpp" />
     <ClCompile Include="src\CTexture.cpp" />
@@ -81,8 +81,8 @@
     <ClInclude Include="src\CPlayer2.h" />
     <ClInclude Include="src\CPoint.h" />
     <ClInclude Include="src\CRectangle.h" />
-    <ClInclude Include="src\CShougaibutuA.h" />
-    <ClInclude Include="src\CShougaibutuGimmick.h" />
+    <ClInclude Include="src\CSikaku.h" />
+    <ClInclude Include="src\CSikakuGimmick.h" />
     <ClInclude Include="src\CSound.h" />
     <ClInclude Include="src\CTask.h" />
     <ClInclude Include="src\CTaskManager.h" />
