--- a/3DLv2_2023_vs2019_00/3DLv2_2023_vs2019_00/GameProgramming/GameProgramming.vcxproj.filters
+++ b/3DLv2_2023_vs2019_00/3DLv2_2023_vs2019_00/GameProgramming/GameProgramming.vcxproj.filters
@@ -138,6 +138,9 @@
     <ClCompile Include="src\CMyShader.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="src\CActionCamera.cpp">
+      <Filter>ソース ファイル\Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\CSound.h">
@@ -247,6 +250,9 @@
     </ClInclude>
     <ClInclude Include="src\CMyShader.h">
       <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CActionCamera.h">
+      <Filter>ソース ファイル\Game</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
