処理時間計測関連の処理を追加(完了)

--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj.filters
@@ -421,7 +421,7 @@
       <Filter>ソース ファイル\BaseSystem\Debug</Filter>
     </ClInclude>
     <ClInclude Include="src\BaseSystem\Time.h">
-      <Filter>ソース ファイル\BaseSystem\System</Filter>
+      <Filter>ソース ファイル\BaseSystem\Debug</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
