デバッグカメラ機能を追加(一応完了)

--- a/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
+++ b/3DLv3_2023_vs2019/Project/BaseProject/BaseProject/BaseProject.vcxproj
@@ -20,6 +20,8 @@
     <ClCompile Include="src\BaseSystem\CColliderTriangle.cpp" />
     <ClCompile Include="src\BaseSystem\CCollisionManager.cpp" />
     <ClCompile Include="src\BaseSystem\CColor.cpp" />
+    <ClCompile Include="src\BaseSystem\CDebugCamera.cpp" />
+    <ClCompile Include="src\BaseSystem\CDebugInput.cpp" />
     <ClCompile Include="src\BaseSystem\CDebugPrint.cpp" />
     <ClCompile Include="src\BaseSystem\CDebugProfiler.cpp" />
     <ClCompile Include="src\BaseSystem\CDebugTimer.cpp" />
@@ -78,6 +80,8 @@
     <ClInclude Include="src\BaseSystem\CColliderTriangle.h" />
     <ClInclude Include="src\BaseSystem\CCollisionManager.h" />
     <ClInclude Include="src\BaseSystem\CColor.h" />
+    <ClInclude Include="src\BaseSystem\CDebugCamera.h" />
+    <ClInclude Include="src\BaseSystem\CDebugInput.h" />
     <ClInclude Include="src\BaseSystem\CDebugPrint.h" />
     <ClInclude Include="src\BaseSystem\CDebugProfiler.h" />
     <ClInclude Include="src\BaseSystem\CDebugTimer.h" />
